--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-homework",
-  "homepage": "https://antonkasheuski.github.io/my-homework",
+  "homepage": "https://AntonKasheuski.github.io/my-homework",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
